# Peng

./: .gitconfig  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  help.html  search-index.js  settings.html
.cargo/: .crates.toml  .crates2.json  .global-cache
.github/workflows/: CI.yml
config/: betaflight.yaml  betaflight_tuning.yaml  hsl_blueprint.rbl  liftoff_quad.yaml  liftoff_quad_advanced.yaml  peng_updated_blueprint.rbl  quad.yaml  quad_hyrl.yaml
peng_quad/: all.html  enum.PlannerType.html  enum.SimulationError.html  fn.color_map_fn.html  fn.create_planner.html  fn.log_data.html  fn.log_depth_image.html  fn.log_maze_obstacles.html  fn.log_maze_tube.html  fn.log_mesh.html  fn.log_pinhole_depth.html  fn.log_trajectory.html  fn.parse_f32.html  fn.parse_vector3.html  fn.pinhole_depth.html  fn.ray_cast.html  fn.update_planner.html  index.html  sidebar-items.js  struct.Camera.html  struct.CirclePlanner.html  struct.HoverPlanner.html  struct.Imu.html  struct.LandingPlanner.html  struct.LissajousPlanner.html  struct.Maze.html  struct.MinimumJerkLinePlanner.html  struct.MinimumSnapWaypointPlanner.html  struct.Obstacle.html  struct.ObstacleAvoidancePlanner.html  struct.PIDController.html  struct.PlannerManager.html  struct.PlannerStepConfig.html  struct.SimulatedQuadrotor.html  struct.Trajectory.html  trait.Planner.html  trait.Quadrotor.html
peng_quad/config/: index.html  struct.CameraConfig.html  struct.Config.html  struct.ImuConfig.html  struct.MazeConfig.html  struct.MeshConfig.html  struct.PIDControllerConfig.html  struct.PIDGains.html  struct.PlannerStep.html  struct.QuadrotorConfig.html  struct.SimulationConfig.html
search.desc/peng_quad/: peng_quad-desc-0-.js
src/: betaflight_quad.rs  config.rs  environment.rs  lib.rs  lib_controller.rs  lib_planner.rs  lib_quadrotor.rs  lib_sensors.rs  liftoff_quad.rs  logger.rs  main.rs  planners.rs  quad_sim.rs  quadrotor.rs  quadrotor_factory.rs  sensors.rs  sync.rs  test_liftoff_base.yaml
src/peng_quad/: config.rs.html  lib.rs.html
src/planners/: circle.rs  hover.rs  hyrl.rs  landing.rs  lissajous.rs  minimum_jerk_line.rs  minimum_snap_waypoint.rs  mod.rs  obstacle_avoidance.rs
target-install/: .rustc_info.json
tests/testdata/: test_betaflight_base.yaml  (+2 more)
(+608 files in other folders)
