[package]
exclude = ["assets/", "CONTRIBUTING.md", "CODE_OF_CONDUCT.md", "SECURITY.md"]
name = "peng_quad"
version = "0.5.3"
edition = "2021"
rust-version = "1.79"
authors = ["Yang Zhou <yangzhou.info@gmail.com>"]
description = "Peng is a minimal quadrotor pipeline including quadrotor dynamics, IMU simulation, various trajectory planners, PID controller and depth map rendering."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/peng_quad/latest/peng_quad"
homepage = "https://github.com/makeecat/Peng"
repository = "https://github.com/makeecat/Peng"
categories = [
  "science::robotics",
  "aerospace::simulation",
  "aerospace::unmanned-aerial-vehicles",
  "algorithms",
]
keywords = ["quadrotor", "quadcopter", "robotics", "drone", "simulation"]
readme = "README.md"
default-run = "peng_quad"

[package.metadata]
build = """
fn main() {
    println!("cargo:rustc-link-search=native=C:\\\\Program Files\\\\Vicon\\\\DataStream SDK\\\\Win64\\\\CPP");
}
"""

[profile.dev]
opt-level = 1 # Enable a small amount of optimization in the dev profile.
[profile.dev.package."*"]
opt-level = 3 # Enable a large amount of optimization in the dev profile for dependencies.
[profile.release]
codegen-units = 1 # Compile the entire crate as one unit.
lto = "thin"      # Do a second optimization pass over the entire program, including dependencies.
[dependencies]
nalgebra = "0.33.2"
rand = { version = "0.8.5", features = ["rand_chacha"] }
rand_distr = "0.4.3"
thiserror = "2.0.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
rayon = "1.10.0"
rand_chacha = "0.3.1"
tokio = { version = "1.41.0", features = ["full"] }
binrw = "0.14.1"
cyber_rc = { git = "https://github.com/friend0/CyberRC.git" }
serialport = "4.6.0"
tempfile = "3.14.0"
vicon-sys = { git = "https://github.com/HSL-UCSC/vicon-rs.git", branch = "lnx", optional = true }
rerun = "0.21.0"
colored = "2.2.0"
futures = "0.3.31"
prost = "0.13.3"
tonic = "0.12.3"
chrono = "0.4.39"
csv = "1.3.1"
async-trait = "0.1.88"

[features]
vicon = ["dep:vicon-sys"]
hyrl = []
default = ["hyrl"]

[build-dependencies]
tonic-build = "0.12.3"
